# field-service-tracker

./: .env.example  .gitignore  CLAUDE.md  COMMITS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_add_trgm_indexes.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging.py  main.py  seed.py
backend/app/clients/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: database.py  dependencies.py  errors.py  exceptions.py  logging.py  schemas.py
backend/app/health/: router.py  schemas.py
backend/app/models/: __init__.py  base.py  client.py  technician.py  work_order.py
backend/app/repositories/: client.py  technician.py  work_order.py
backend/app/routers/: clients.py  health.py  technicians.py  work_orders.py
backend/app/schemas/: base.py  client.py  errors.py  health.py  technician.py  work_order.py
backend/app/services/: client.py  technician.py  work_order.py
backend/app/technicians/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/work_orders/: constants.py  dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_clients.py  test_error_envelope.py  test_health.py  test_sorting.py  test_technicians.py  test_validation.py  test_work_orders.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  (+2 more)
(+23 files in other folders)
