[project]
name = "field-service-tracker-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sentry-sdk[fastapi]>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
